--- a/src/app/pages/colheitadosaber/colheitadosaber.component.css
+++ b/src/app/pages/colheitadosaber/colheitadosaber.component.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   width: 100%;
   min-height: 100vh;
-  background-image: url('/img/background-3.jpeg');
+  background-image: url('/img/BackgroundNight.png');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
