--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -64,7 +64,7 @@
 
                 <div class="checkbox-group">
                     <input type="checkbox" id="terms" name="terms">
-                    <label for="terms">Sim, li e concordo com os termos e condições</label>
+                    <label for="terms">Sim, li e concordo com os <a href="https://termos-e-condi-es.vercel.app//">Termos de uso e Políticas de Privacidade.</a></label>
                 </div>
                 <div class="checkbox-group">
                     <input type="checkbox" id="newsletter" name="newsletter">
