--- a/src/app/pages/colheitadosaber/colheitadosaber.component.html
+++ b/src/app/pages/colheitadosaber/colheitadosaber.component.html
@@ -16,14 +16,14 @@
       
 
       <!-- CARD 1 - DISPONÍVEL -->
-      <a href="https://youtu.be/qdGWhbVb-90?si=KdJ10Ud6Dcod48b7" class="card-link">
+      <a href="https://www.youtube.com/watch?v=XBZ4-Di7KPY" class="card-link">
         <img src="/img/capa/EP1.png" class="card-img">
       </a>
 
       <!-- CARD 2 - INDISPONÍVEL -->
-      <div class="card card-indisponivel">
-        indisponível
-      </div>
+      <a href="https://youtu.be/3OnMhwD3WpU?si=ynTdk5TTTBNVRfcu" class="card-link">
+        <img src="/img/capa/bannerMusic.pgit ng" class="card-img">
+      </a>
 
     </div>
   </main>
