--- a/src/app/pages/colheitadosaber/colheitadosaber.component.html
+++ b/src/app/pages/colheitadosaber/colheitadosaber.component.html
@@ -22,7 +22,7 @@
 
       <!-- CARD 2 - INDISPONÍVEL -->
       <a href="https://youtu.be/3OnMhwD3WpU?si=ynTdk5TTTBNVRfcu" class="card-link">
-        <img src="/img/capa/bannerMusic.pgit ng" class="card-img">
+        <img src="/img/capa/bannerMusic.png" class="card-img">
       </a>
 
     </div>
