--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -32,7 +32,8 @@
 
                 <div class="separator">ou</div>
 
-                <button type="button" class="btn btn-google" onclick="loginGoogle()">
+                <button type="button" class="btn btn-google" (click)="loginGoogle()">
+
                     <i class="fa-brands fa-google"></i>
                     Continue com Google
                 </button>
@@ -75,7 +76,8 @@
 
                 <div class="separator">ou</div>
 
-                <button type="button" onclick="loginGoogle()" class="btn btn-google">
+                <button type="button" (click)="loginGoogle()" class="btn btn-google">
+
                     <i class="fa-brands fa-google"></i>
                     Continue com Google
                 </button>
